Provide the source of the display mode changes

Show the resolution change notification when the source
of the display mode change is a keyboard shortcut if:
- The mode change results in changing the UI scale.
- The mode change results in changing the display size
  in unified mode.

BUG=757874
TEST=added tests

Change-Id: I66ef8ac91b12e914187b4edc74aa2f6228e47f6c